--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <title>Zulkafil Abbas</title>
   
-  <meta name="author" content="Jon Barron">
+  <meta name="author" content="Zulkafil Abbas">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -37,16 +37,16 @@
                 I've recieved the <a href="https://www2.eecs.berkeley.edu/Students/Awards/15/">C.V. Ramamoorthy Distinguished Research Award</a> and the <a href="https://www.thecvf.com/?page_id=413#YRA">PAMI Young Researcher Award</a>.
               </p>
               <p style="text-align:center">
-                <a href="mailto:jonbarron@gmail.com">Email</a> &nbsp/&nbsp
+                <a href="mailto:zulkafilabbas@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/JonBarron-bio.txt">Biography</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://www.facebook.com/barron.jon">Facebook</a> &nbsp/&nbsp
-                <a href="https://twitter.com/jon_barron">Twitter</a>
+                <a href="https://scholar.google.com/citations?user=TSwLrj0AAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://www.facebook.com/zulkafilabbas">Facebook</a> &nbsp/&nbsp
+                <a href="https://twitter.com/zulkafilabbas">Twitter</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/JonBarron.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/JonBarron_circle.jpg" class="hoverZoomLink"></a>
+              <a href="images/zulkafilabbas.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/JonBarron_circle.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
