--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/zulkafilabbas.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/JonBarron_circle.jpg" class="hoverZoomLink"></a>
+              <a href="images/zulkafilabbas.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/zulkafilabbas.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
