Fixing minor bugs

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
               <p>I am a researcher at <a href="http://www.i.kyoto-u.ac.jp/en/">Kyoto University</a>, where I work on making intelligent social robots using machine learning.
               </p>
               <p style="text-align:center">
-                <a href="mailto:zulkafilabbas@gmail.com">Email</a> &nbsp/&nbsp
+                <a href="zulkafilabbas@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?hl=en&user=TSwLrj0AAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href=https://twitter.com/zulkafilabbas">Twitter</a>
+                <a href="https://twitter.com/zulkafilabbas">Twitter</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
