--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I am interested in machine learning and robotics. Please see my <a href="https://scholar.google.com/citations?hl=en&user=TSwLrj0AAAAJ">Google Scholar</a> for my latest work.
+                Please see my <a href="https://scholar.google.com/citations?hl=en&user=TSwLrj0AAAAJ">Google Scholar</a> for my latest work.
               </p>
             </td>
           </tr>
